force-app/main/default/objects/COMM_CPMSCapacity__c/COMM_CPMSCapacity__c.object-meta.xml
<CustomObject>
    <description>The CPMS available capacity</description>
    <label>CPMS Capacity</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>CPMS Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPMS Capacities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>