force-app/main/default/objects/COMM_CPMSCapacity__c/fields/COMM_Park__c.field-meta.xml
<CustomField>
    <fullName>COMM_Park__c</fullName>
    <description>Park where capacity available was retrieved</description>
    <label>Park</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Park</valueSetName>
    </valueSet>
</CustomField>