force-app/main/default/objects/COMM_CPMSCapacity__c/fields/COMM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>COMM_Quantity__c</fullName>
    <description>Places available</description>
    <label>Places available</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>