force-app/main/default/objects/COMM_CPMSCapacity__c/fields/COMM_RecordDateTime__c.field-meta.xml
<CustomField>
    <fullName>COMM_RecordDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and hour when record was retrieved</description>
    <label>Retrieved date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>