force-app/main/default/objects/COMM_CPMSCapacity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COMM_Airport__c</columns>
    <columns>COMM_Park__c</columns>
    <columns>COMM_Quantity__c</columns>
    <columns>COMM_RecordDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>